# lez-multisig

./: Cargo.toml  flake.nix
.github/workflows/: e2e.yml
cli/: Cargo.toml
idl-gen/: Cargo.toml
methods/guest/: Cargo.toml
multisig_program/: Cargo.toml
scripts/: demo-full-flow.sh  demo-v2.sh  logos-storage-proxy.py  mock-codex.py
