[workspace]
resolver = "2"
members = [
    "idl-gen",
    "multisig_core",
    "multisig_program",
    "methods",
    "methods/guest",
    "e2e_tests",
    "lez-multisig-ffi",
    "cli",
]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.5", features = ['std'] }
risc0-build = "=3.0.5"
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "9df121704fe3ae8831d616e26157be15e1f3f26d", features = ["host"] }
borsh = "1.5.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
