[package]
name = "multisig_program"
version = "0.1.0"
edition = "2024"

[dependencies]
multisig_core = { path = "../multisig_core" }
nssa_core.workspace = true
spel-framework = { path = "../../spel/spel-framework" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
borsh.workspace = true
risc0-zkvm.workspace = true
