[package]
name = "multisig-guest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multisig"
path = "src/bin/multisig.rs"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"
test = false

[dependencies]
multisig_core = { path = "../../multisig_core" }
multisig_program = { path = "../../multisig_program" }
nssa_core.workspace = true
risc0-zkvm.workspace = true
borsh.workspace = true
spel-framework = { git = "https://github.com/logos-co/spel.git", branch = "main" }
serde_json = "1"
